--- a/css/style.css
+++ b/css/style.css
@@ -212,9 +212,27 @@ p {
 }
 #list li button {
   position: static;
+  text-align: left;
+  line-height: 20px;
   border: none !important;
   width: 100%;
   height: 49px;
+  padding: 4px 12px 0;
+}
+#list li button span.equ {
+  float: right;
+  color: #999999;
+  font-size: 13px;
+  line-height: 20px;
+  max-width: 100%;
+  padding: 3px 0 0 5px;
+  white-space: nowrap;
+  text-align: right;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+#list li button span.equ span {
+  margin: 0 3px;
 }
 #list li:first-child {
   border-top: 1px solid #ebedeb;
