--- a/css/style.less
+++ b/css/style.less
@@ -164,9 +164,25 @@ p {
 		padding: 0;
 		button {
 			position: static;
+			text-align: left;
+			line-height: 20px;
 			border: none !important;
 			width: 100%;
 			height: 49px;
+			padding: 4px 12px 0;
+			span.equ {
+				float: right;
+				color: @equationOperatorColor;
+				font-size: 13px;
+				line-height: 20px;
+				max-width: 100%;
+				padding: 3px 0 0 5px;
+				white-space: nowrap;
+				text-align: right;
+				text-overflow: ellipsis;
+				overflow: hidden;
+				span {margin: 0 3px;}
+			}
 		}
 		&:first-child {border-top: 1px solid @historyRuleColor;}
 	}
